--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html PUBLIC '-//W3C//DTD HTML 3.2//EN'>\n
-<html>\n <head> <meta http-equiv='refresh' content='0; url=http://www.tc.umn.edu/~eeg/home.html'> <title> </title> </head> <body> redirecting... </body>\n </html>
+<html>\n <head> <meta http-equiv='refresh' content='0; url='home.html'> <title> </title> </head> <body> redirecting... </body>\n </html>
