--- a/people.html
+++ b/people.html
@@ -77,6 +77,7 @@ Upon moving here, I immediately became addicted to ice skating.
 <div class="line"><br /></div>
 <div class="line"><br /></div>
 <div class="line"><br /></div>
+<div class="line"><br /></div>
 </div>
 </div>
 <div class="section" id="tanjona-ramiadantsoa">
