Tanjona photo.  CV update.

--- a/people.html
+++ b/people.html
@@ -89,6 +89,9 @@ His work here will continue to be conducted with boundless enthusiasm!</p>
 <div class="line-block">
 <div class="line"><br /></div>
 <div class="line"><br /></div>
+<div class="line"><br /></div>
+<div class="line"><br /></div>
+<div class="line"><br /></div>
 </div>
 </div>
 </div>
