added Stacey's ms

--- a/pubs.html
+++ b/pubs.html
@@ -226,6 +226,8 @@ T.-L. Ashman, D. Bachtrog, H. Blackmon, E.E. Goldberg, M.W. Hahn, M. Kirkpatrick
 <strong>Dioecy is not a strong driver or brake on diversification.</strong></p>
 <p>Pannell, J.R., J.R. Auld, Y. Brandvain, M. Burd, J.W. Busch, P.-O. Cheptou, J.K. Conner, E.E. Goldberg, A. Grant, D. Grossenbacher, S.M. Hovick, S. Kalisz, T. Petanidou, A. Randle, R. Rubio de Casas, C.A. Pauw, J. Vamosi, and A. Winn.
 <strong>The scope of Baker&#8217;s law.</strong></p>
+<p>Smith, S.D. and E.E. Goldberg.
+<strong>Tempo and mode of flower color evolution.</strong></p>
 </div>
 <div class="section" id="book-chapter">
 <h2>Book Chapter</h2>
