--- a/people.html
+++ b/people.html
@@ -108,7 +108,7 @@ He&#8217;s interested in population genetics and plant mating system evolution, 
 <p>Our lab is seeking an undergraduate student to develop a web-based platform for collaborative data entry and analysis.
 Desired qualifications include experience with Python, Django, and Apache web servers.
 Equally valued, however, are a demonstrated history of technical problem-solving and an independent work ethic.
-Full-time or part-time work is available this summer, and/or part-time work during the 2015-2016 academic year.
+Full-time or part-time work is available this summer and/or part-time work during the 2015-2016 academic year.
 Initial salary is $10/hour, with raises possible based on performance and experience.
 Hours and location of work can be flexible after a good working relationship is established.
 <strong>To apply</strong>, please send a CV and a cover letter that outlines relevant experience to Emma Goldberg, eeg &lt;at&gt; umn &lt;dot&gt; edu.</p>
