--- a/pubs.html
+++ b/pubs.html
@@ -253,6 +253,8 @@ T.-L. Ashman, D. Bachtrog, H. Blackmon, E.E. Goldberg, M.W. Hahn, M. Kirkpatrick
 <h2>Submitted Manuscripts</h2>
 <p>Sabath, N., E.E. Goldberg, L. Glick, M. Einhorn, T.-L. Ashman, R. Ming, S.P. Otto, J.C. Vamosi, and I. Mayrose.
 <strong>Dioecy is not a strong driver or brake on diversification.</strong></p>
+<p>Goldberg, E.E., S.P. Otto, J.C. Vamosi, I. Mayrose, R. Ming, T.-L. Ashman.
+<strong>Straying from the pathway: Species-level phylogenetic analysis reveals transitions both to and from dioecy.</strong></p>
 </div>
 <div class="section" id="book-chapter">
 <h2>Book Chapter</h2>
