--- a/pubs.html
+++ b/pubs.html
@@ -65,6 +65,10 @@
 <h1>Publications</h1>
 <div class="section" id="peer-reviewed-articles">
 <h2>Peer-Reviewed Articles</h2>
+<p>Sabath, N., E.E. Goldberg, L. Glick, M. Einhorn, T.-L. Ashman, R. Ming, S.P. Otto, J.C. Vamosi, and I. Mayrose.
+(in press).
+<strong>Dioecy does not consistently accelerate or slow lineage diversification across multiple genera of angiosperms.</strong>
+<em>New Phytologist.</em></p>
 <p>Grossenbacher, D., R. Briscoe Runquist, E.E. Goldberg, and Y. Brandvain.
 (in press).
 <strong>No association between plant mating system and geographic range overlap.</strong>
@@ -251,8 +255,6 @@ T.-L. Ashman, D. Bachtrog, H. Blackmon, E.E. Goldberg, M.W. Hahn, M. Kirkpatrick
 </div>
 <div class="section" id="submitted-manuscripts">
 <h2>Submitted Manuscripts</h2>
-<p>Sabath, N., E.E. Goldberg, L. Glick, M. Einhorn, T.-L. Ashman, R. Ming, S.P. Otto, J.C. Vamosi, and I. Mayrose.
-<strong>Dioecy is not a strong driver or brake on diversification.</strong></p>
 <p>Goldberg, E.E., S.P. Otto, J.C. Vamosi, I. Mayrose, R. Ming, T.-L. Ashman.
 <strong>Straying from the pathway: Species-level phylogenetic analysis reveals transitions both to and from dioecy.</strong></p>
 </div>
