added Tim's photo

--- a/people.html
+++ b/people.html
@@ -104,7 +104,6 @@ His current foray into the plant world is centered on the inference and conseque
 <div class="line"><br /></div>
 <div class="line"><br /></div>
 <div class="line"><br /></div>
-<div class="line"><br /></div>
 </div>
 <img alt="AH photo" class="align-left" src="_images/alex.jpg" />
 </div>
@@ -119,11 +118,20 @@ He is interested in plant mating system evolution and population genetics (and m
 <div class="line"><br /></div>
 <div class="line"><br /></div>
 </div>
+<img alt="TO photo" class="align-left" src="_images/tim.jpg" />
 </div>
 <div class="section" id="tim-ohlert">
 <h3>Tim Ohlert</h3>
 <p>Tim is a senior at UMN, studying environmental science, plant biology, and forest ecosystem management.
 In the theme of Baker&#8217;s Law, he is working on an island biogeography project with a plant mating system twist.</p>
+<div class="line-block">
+<div class="line"><br /></div>
+<div class="line"><br /></div>
+<div class="line"><br /></div>
+<div class="line"><br /></div>
+<div class="line"><br /></div>
+<div class="line"><br /></div>
+</div>
 </div>
 <div class="section" id="sai-sunkam">
 <h3>Sai Sunkam</h3>
