--- a/pubs.html
+++ b/pubs.html
@@ -65,6 +65,10 @@
 <h1>Publications</h1>
 <div class="section" id="peer-reviewed-articles">
 <h2>Peer-Reviewed Articles</h2>
+<p>Glick, L., N. Sabath, T.-L. Ashman, E.E. Goldberg, and I. Mayrose.
+in press.
+<strong>Polyploidy and sexual system in angiosperms&#8212;is there an association?</strong>
+<em>American Journal of Botany</em>.</p>
 <p>Grossenbacher, D., R. Briscoe Runquist, E.E. Goldberg, and Y. Brandvain.
 2016.
 <strong>No association between plant mating system and geographic range overlap.</strong>
