small updates: pub links, address

--- a/home.html
+++ b/home.html
@@ -100,10 +100,9 @@ eeg &lt;at&gt; umn &lt;dot&gt; edu</p>
 <br />
 University of Minnesota
 <br />
-1987 Upper Buford Cir
+1479 Gortner Ave, Suite 140
 <br />
-Saint Paul, MN 55108-6097</p>
-<p>Mail Code 6097</p>
+Saint Paul, MN 55108</p>
 </div>
 </div>
 </div>
