--- a/code.html
+++ b/code.html
@@ -26,8 +26,8 @@
     <link rel="prev" title="Publications" href="pubs.html" /><link href='http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>
 <link href="_static/solarized-dark.css" rel="stylesheet">
   </head>
-  <body> 
-      <div class="sphinxsidebar">
+  <body role="document"> 
+      <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
 <p class="logo"> <img class="logo" src="_static/bricks.jpg" alt="Logo"/> </p>
 <h3></h3>
@@ -58,7 +58,7 @@
     <div class="document">
       <div class="documentwrapper">
         <div class="bodywrapper">
-          <div class="body">
+          <div class="body" role="main">
             
   <div class="section" id="software">
 <h1>Software</h1>
