Baker paper accepted

--- a/pubs.html
+++ b/pubs.html
@@ -66,6 +66,10 @@
 <h1>Publications</h1>
 <div class="section" id="peer-reviewed-articles">
 <h2>Peer-Reviewed Articles</h2>
+<p>Grossenbacher, D.L., Y. Brandvain, J.R. Auld, M. Burd, P.-O. Cheptou, J.K. Conner, A.G. Grant, S.M. Hovick, J.R. Pannell, A. Pauw, T. Petanidou, A. Randle, R. Rubio de Casas, J. Vamosi, A. Winn, B. Igić, J.W. Busch, S. Kalisz, and E.E.Goldberg.
+(in press).
+<strong>Self-compatibility is overrepresented on islands.</strong>
+<em>New Phytologist.</em></p>
 <p>Goldberg, E.E., S.P. Otto, J.C. Vamosi, I. Mayrose, N. Sabath, R. Ming, T.-L. Ashman.
 (in press).
 <strong>Macroevolutionary synthesis of flowering plant sexual systems.</strong>
