--- a/people.html
+++ b/people.html
@@ -106,6 +106,7 @@ He is always surrounded by coffee and a swarm of new project ideas.</p>
 <div class="line"><br /></div>
 <div class="line"><br /></div>
 </div>
+<img alt="JJ photo" class="align-left" src="_images/josh.jpg" />
 </div>
 <div class="section" id="josh-justison">
 <h3>Josh Justison</h3>
@@ -113,6 +114,9 @@ He is always surrounded by coffee and a swarm of new project ideas.</p>
 He started off working with Heath on applying phylogenetic models of chromosome number and geographic range evolution.
 Now he is embarking on his own project about how reticulation in phylogenies can throw off inferences about character evolution and diversification.</p>
 <div class="line-block">
+<div class="line"><br /></div>
+<div class="line"><br /></div>
+<div class="line"><br /></div>
 <div class="line"><br /></div>
 </div>
 <img alt="AN photo" class="align-left" src="_images/anna.jpg" />
