--- a/pubs.html
+++ b/pubs.html
@@ -52,7 +52,7 @@
 <div class="section" id="peer-reviewed-articles">
 <h2>Peer-Reviewed Articles</h2>
 <p>Harkness, A., E.E. Goldberg, Y. Brandvain.
-(accepted).
+(in press).
 <strong>The evolutionary response of mating system to heterosis.</strong>
 <em>Journal of Evolutionary Biology</em>.
 <br />
